# wav2vec-burn

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
cli/: Cargo.toml
cli/src/: audio.rs  lib.rs  loader.rs  main.rs  model.rs
loader/: Cargo.toml
loader/src/: audio.rs  lib.rs  model.rs
test-data/: wav2vec2-base-960h.safetensors  wav2vec2-large-960h.safetensors
test-data/librispeech/1089/134686/: 1089-134686-0000.flac  1089-134686-0001.flac  1089-134686-0002.flac  1089-134686-0003.flac  1089-134686-0004.flac  1089-134686-0005.flac  1089-134686-0006.flac  1089-134686-0007.flac  1089-134686-0008.flac  1089-134686-0009.flac  1089-134686-0010.flac  1089-134686-0011.flac  1089-134686-0012.flac  1089-134686-0013.flac  1089-134686-0014.flac  1089-134686-0015.flac  1089-134686-0016.flac  1089-134686-0017.flac  1089-134686-0018.flac  1089-134686-0019.flac  1089-134686-0020.flac  1089-134686-0021.flac  1089-134686-0022.flac  1089-134686-0023.flac  1089-134686-0024.flac  1089-134686-0025.flac  1089-134686-0026.flac  1089-134686-0027.flac  1089-134686-0028.flac  1089-134686-0029.flac  1089-134686-0030.flac  1089-134686-0031.flac  1089-134686-0032.flac  1089-134686-0033.flac  1089-134686-0034.flac  1089-134686-0035.flac  1089-134686-0036.flac  1089-134686-0037.flac  1089-134686.trans.txt
wav2vec-burn/: Cargo.toml
wav2vec-burn-test/: Cargo.toml
wav2vec-burn-test/src/: audio.rs  evaluation.rs  lib.rs  model.rs  test_data.rs
wav2vec-burn-test/src/test_data/: librispeech.rs
wav2vec-burn/src/: config.rs  decoder.rs  error.rs  feature_encoder.rs  lib.rs  model.rs  safetensors.rs  transformer.rs  util.rs  weights.rs
wav2vec-burn/src/decoder/: beam.rs  beams.rs
wav2vec-burn/src/util/: log_space.rs
wav2vec-burn/tests/: librispeech_wer.rs  transcription.rs
