[workspace]
resolver = "3"
members = ["cli", "wav2vec-burn", "wav2vec-burn-test"]

[workspace.package]
version = "0.1.0"
edition = "2024"

rust-version = "1.89.0"

repository = "https://github.com/privacyresearchgroup/wav2vec-burn"
license = "MIT"

exclude = ["/.github", ".*"]

[workspace.dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
burn = "0.20.0"
clap = { version = "4", features = ["derive"] }
claxon = "0.4"
dirs = "6"
env_logger = "0.11"
flate2 = "1"
hound = "3"
itertools = "0.14.0"
log = "0.4"
rubato = "0.15"
safetensors = "0.3"
tar = "0.4"
tempfile = "3"
thiserror = "2.0.18"
reqwest = { version = "0.12", features = ["blocking"] }

[workspace.lints.rust]
bare_trait_objects = "warn"
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# arithmetic bug lints
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
lossy_float_literal = "warn"
manual_midpoint = "warn"

# disabled style lints
let_and_return = "allow"
redundant_pattern_matching = "allow"
type_complexity = "allow"

# pedantic and/or style lints
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
collapsible_else_if = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
decimal_bitwise_operands = "warn"
default_trait_access = "warn"
doc_broken_link = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
doc_paragraphs_missing_punctuation = "warn"
elidable_lifetime_names = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
fn_params_excessive_bools = "warn"
format_collect = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
ignore_without_reason = "warn"
ignored_unit_patterns = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
manual_assert = "warn"
manual_ilog2 = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
min_ident_chars = "warn"
mismatching_type_param_order = "warn"
missing_fields_in_debug = "warn"
mod_module_files = "warn"
must_use_candidate = "warn"
mut_mut = "warn"
needless_bitwise_bool = "warn"
needless_for_each = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
no_effect_underscore_binding = "warn"
non_ascii_literal = "warn"
nonminimal_bool = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
redundant_test_prefix = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
same_name_method = "warn"
semicolon_if_nothing_returned = "warn"
should_panic_without_expect = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
string_add_assign = "warn"
struct_excessive_bools = "warn"
tests_outside_test_module = "warn"
todo = "warn"
too_many_lines = "warn"
trivially_copy_pass_by_ref = "warn"
unchecked_time_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_self_imports = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_async = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unwrap_used = "warn"
used_underscore_binding = "warn"
verbose_bit_mask = "warn"
