[package]
name = "wav2vec-burn-cli"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
anyhow = { workspace = true }
burn = { workspace = true, features = ["ndarray"] }
clap = { workspace = true }
claxon = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
hound = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
rubato = { workspace = true }
wav2vec-burn = { path = "../wav2vec-burn" }

[lints]
workspace = true
