[package]
name = "wav2vec-burn-loader"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
anyhow = { workspace = true }
burn = { workspace = true, features = ["ndarray"] }
claxon = { workspace = true }
hound = { workspace = true }
log = { workspace = true }
rubato = { workspace = true }
wav2vec-burn = { path = "../wav2vec-burn" }

[lints]
workspace = true
