[package]
name = "wav2vec-burn-test"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
burn = { workspace = true, features = ["ndarray"] }
env_logger = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
wav2vec-burn-cli = { path = "../cli" }

[lints]
workspace = true
