[package]
name = "wav2vec-burn"
description = "An implementation of Meta's wav2vec 2.0 speech transcription using the Burn ML Framework."
version.workspace = true
edition.workspace = true

rust-version.workspace = true

repository.workspace = true
license.workspace = true

categories = ["multimedia::audio"]
keywords = ["speech", "transcription", "audio"]

readme = "../README.md"
exclude.workspace = true

[dependencies]
burn = { workspace = true }
bytes = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_float_eq = { workspace = true }
burn = { workspace = true, features = ["ndarray"] }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
wav2vec-burn-test = { path = "../wav2vec-burn-test" }

[lints]
workspace = true
